# novel-forge

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  config.yaml  consistency_report.md  placeholder_consistency_report.md  pyproject.toml  rereview_only.py  rereview_sev.py  run_vol2_v3.py  used_names.json
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  GLOSSARY.md  INDEX.md  KEYWORD_SELECTION_GUIDE.md  OLLAMA_API.md  OPERATIONS.md  PIPELINE.md  PROMPTS.md  PROMPT_SCHEMA_MAP.md  SETUP_GUIDE.md  SPECIFICATION.md  USER_GUIDE.md  llm_behavior_report.md  schema_maintenance.md
prompts/: bible_update.md  chapter_design.md  chapter_design_review.md  chapter_design_revision.md  chapter_outline.md  cover_prompt.md  kdp_final_review.md  kdp_metadata.md  scene_design.md  scene_design_review.md  scene_design_revision.md  scene_draft.md  scene_outline.md  scene_quality_gate.md  scene_review.md  scene_revision.md  scene_summary.md  scene_summary_and_bible_update.md  series_plan.md  series_plan_characters.md  series_plan_characters_review.md  series_plan_characters_revision.md  series_plan_concept.md  series_plan_concept_review.md  series_plan_concept_revision.md  series_plan_core.md  series_plan_core_review.md  series_plan_core_revision.md  series_plan_review.md  series_plan_revision.md  series_plan_volumes.md  series_plan_volumes_review.md  series_plan_volumes_revision.md  system.md  volume_design.md  volume_design_review.md  volume_design_revision.md  volume_outline.md  volume_outline_review.md  volume_outline_revision.md
schemas/: bible.json  bible_update.json  blackboard.json  chapter_design.json  chapter_design_review.json  chapter_design_revision.json  chapter_outline.json  chapter_review.json  chapter_revision.json  cover_prompt.json  kdp_metadata.json  review.json  revision_priority.json  scene.json  scene_design.json  scene_design_review.json  scene_design_revision.json  scene_draft.json  scene_outline.json  scene_quality_gate.json  scene_review.json  scene_revision.json  scene_summary.json  scene_summary_and_bible_update.json  series_plan.json  series_plan_characters.json  series_plan_characters_review.json  series_plan_characters_revision.json  series_plan_concept.json  (+20 more)
(+282 files in other folders)
