[project]
name = "novel-forge"
version = "0.1.0"
description = "Local-LLM assisted novel production pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "opencc-purepy>=1.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
novel-forge = "novel_forge.cli:app"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
